<resources>
    <string name="app_name">MobDataConsumption</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="news_title">Congrats! You are featured on Home page as a recommended seller!</string>
    <string name="news_description">Hi rita12399, thank you for being awesome on Carousell! We want more Carousellers see you and your listings and hope you can keep up the good listings and bring good experience to fellow Carousellers.</string>
    <string name="date_of_creation">5 hours ago</string>
    <string name="statistics">MobData Statistics</string>
    <string name="recent">Recent</string>
    <string name="popular">Popular</string>
    <string name="error_msg">Something wrong happend. Please try again later</string>
    <string name="network_issue_msg">Due to network issue, offline data is loaded</string>
    <string name="quater_title">Quater</string>
    <string name="data_volume_title">Volume of Mobile Data</string>
    <string name="Q1">Q1</string>
    <string name="Q2">Q2</string>
    <string name="Q3">Q3</string>
    <string name="Q4">Q4</string>
    <string name="qone_data_volume">N/A</string>
    <string name="total_volume">Total Data Volume(2018)</string>
    <string name="data_volume_value">50 PB</string>
</resources>
