<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dimen_8"
    android:layout_marginEnd="@dimen/dimen_8"
    android:layout_marginLeft="@dimen/dimen_8"
    android:layout_marginRight="@dimen/dimen_8"
    android:layout_marginStart="@dimen/dimen_8"
    app:cardCornerRadius="@dimen/dimen_4">

    <View
        android:id="@+id/dataVolumIndicator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_8"
        android:layout_below="@id/tvQuaFourDataVolume"
        android:background="#139719" />

    <RelativeLayout
        android:id="@+id/itemContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvQuater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_16"
            android:maxLines="2"
            android:text="@string/quater_title"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDataVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvQuater"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_4"
            android:text="@string/data_volume_title"
            android:textColor="@color/black"
            android:textSize="@dimen/size_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvQuaOneValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDataVolume"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/Q1"
            android:textColor="@color/grey"
            android:textSize="@dimen/size_12" />

        <TextView
            android:id="@+id/tvQuaOneDataVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tvDataVolume"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/qone_data_volume"
            android:textColor="@color/grey"
            android:textSize="@dimen/size_12" />

        <TextView
            android:id="@+id/tvQuaTwoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvQuaOneValue"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/Q2"
            android:textColor="@color/grey"
            android:textSize="@dimen/size_12" />

        <TextView
            android:id="@+id/tvQuaTwoDataVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tvQuaOneDataVolume"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/qone_data_volume"
            android:textColor="@color/grey"
            android:textSize="@dimen/size_12" />

        <TextView
            android:id="@+id/tvQuaThreeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvQuaTwoValue"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/Q3"
            android:textColor="@color/grey"
            android:textSize="@dimen/size_12" />

        <TextView
            android:id="@+id/tvQuaThreeDataVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tvQuaTwoDataVolume"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/qone_data_volume"
            android:textColor="@color/grey"
            android:textSize="@dimen/size_12" />

        <TextView
            android:id="@+id/tvQuaFourValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvQuaThreeValue"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/Q4"
            android:textColor="@color/grey"
            android:textSize="@dimen/size_12" />

        <TextView
            android:id="@+id/tvQuaFourDataVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tvQuaThreeDataVolume"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/qone_data_volume"
            android:textColor="@color/grey"
            android:textSize="@dimen/size_12" />

        <View
            android:id="@+id/border"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dime_2"
            android:layout_below="@id/tvQuaFourDataVolume"
            android:background="#119fa1a4" />

        <TextView
            android:id="@+id/tvTotalDataVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/border"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/total_volume"
            android:textColor="@color/green"
            android:textSize="@dimen/size_12"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalDataVolumeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/border"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/data_volume_value"
            android:textColor="@color/green"
            android:textSize="@dimen/size_12"
            android:textStyle="bold" />
    </RelativeLayout>
</android.support.v7.widget.CardView>